<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/route"
            android:icon="@drawable/ic_search"
            android:title="@string/route" />
        <item
            android:id="@+id/lines"
            android:icon="@drawable/ic_directions_bus"
            android:title="@string/lines" />
        <item
            android:id="@+id/schedule"
            android:icon="@drawable/ic_timer"
            android:title="@string/schedule" />
        <item
            android:id="@+id/myspace"
            android:icon="@drawable/ic_person"
            android:title="@string/myspace" />
    </group>

    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
